# gambit

./: .env.example  .gitignore  README.md  ecosystem.config.cjs  northstar.md  pyproject.toml  requirements.txt
docs/: architecture.excalidraw  architecture.md  ebay.md  eval-plan.md  gen_architecture.py  self-learning.md  strategy.md
docs/capture/: gambit-conversation-capture.md
docs/playbook/: 00-PRD.md  CONVENTIONS.md  EVAL-PLAN.md  EXTRACTION-SCHEMA.md  README.md  SECTION-1-source-audit.md  SECTION-2-cross-source-synthesis.md  SECTION-3-marketplace-playbook.md  SECTION-4-decision-framework.md  SECTION-5-self-improving-system.md  SECTION-6-metrics.md  SECTION-7-reusable-assets.md  SECTION-8-gaps.md  SECTION-9-final-synthesis.md
docs/playbook/book-profiles/: 3d-negotiation.md  getting-past-no.md  getting-to-yes.md  influence.md
frontend/: .gitignore  .npmrc  next.config.mjs  package.json  pnpm-lock.yaml  stub-openai.mjs
frontend/app/: ThemeToggle.tsx  globals.css  layout.tsx  page.tsx
gambit/: __init__.py  agui.py  config.py  history.py  improve_loop.py  llm.py  logfire_read.py  observability.py  optimizer.py  optimizer_gemini.py  runstore.py  seller_agent.py  settings.py  trace.py  verifier.py  watch.py
gambit/engine/: __init__.py  improve.py  run.py  seam.py
gambit/legacy/: __init__.py  inference.py  metrics.py  negotiation.py  opponent.py
gambit/negotiation/: __init__.py  agents.py  domain.py  fixtures.py  market.py  models.py  policies.py  policy.py  propose.py  reward.py  seller_brain.py  verifier.py
gambit/voice/: __init__.py  seller_worker.py
haggle/: __init__.py  buyer_sim.py  config.py  improve_loop.py  models.py  optimizer.py  personas.py  storage.py
playbook/: HANDOFF.md  README.md  SECTION-4-decision-framework.md
playbook/assets/: build_assets.py
playbook/book-profiles/: bargaining-for-advantage.md  difficult-conversations.md  never-split-the-difference.md
scripts/: backfill_history.py  harvest.py  ingest_export.py  migrate_to_postgres.py  overview.py  play.py  play_multiple.py  recover_transcripts.py  reflect.py  review_run.py  run_demo.py  run_league.py  run_live.py  run_live_curve.py  run_offline.py  spike_minimax.py
tests/: test_foundation.py  test_improve.py  test_marketplace.py
(+26 files in other folders)
