[project]
name = "gambit"
version = "0.1.0"
description = "Gambit — a self-improving auto-negotiator (AI Engineer World's Fair Hackathon 2026)"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai",            # typed agents + validated structured output; MiniMax M3 (OpenAI-compatible)
    "pydantic-evals",         # dataset/evaluator harness for the M0 spike + (later) the regression suite
    "pydantic-settings>=2.0", # config from env/.env, validated at import
    "logfire[psycopg]>=2.0",  # observability — Pydantic AI tracing is built into logfire core; psycopg extra for DB tracing
    "python-dotenv>=1.0",     # backs pydantic-settings' env_file=".env" loading
    "psycopg[binary]>=3.1",   # DO Postgres (Tier 2)
    "pgvector>=0.2.5",        # pgvector memory (Tier 2)
    "anthropic>=0.111.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",   # agents are async; run_episode awaits agent.run()
]
# Gemini 3.5 feature layer — install with `uv sync --group feature-layer` when building it.
# Kept out of the default deps so the Phase-1 core (MiniMax) stays lean and offline-runnable.
feature-layer = [
    "google-genai>=1.0",          # Interactions API (Antigravity optimizer) · Nano Banana · Gemini Live
    "livekit-agents[google]~=1.5",# voice buyer seat: LiveKit transport + Gemini Live plugin
    "livekit",                    # rtc SDK for the raw Gemini-Live TranslationBridge (primary translate path)
    "requests>=2.32",             # eBay API connector (Trading API is XML over HTTP; parse with stdlib xml.etree)
]

# Application project (not a distributable package) — uv just manages the venv + deps.
[tool.uv]
package = false
# Dependency cooling (supply-chain safety): never resolve a version published after this date.
# One-time bump (authorized) to admit google-genai 2.10.0 (published 2026-06-24) for the live
# Gemini build — a rolling "1 week" window would exclude a 4-day-old release. Restore the rolling
# form (exclude-newer = "1 week") once 2.10.0 ages past a week (after 2026-07-01).
exclude-newer = "2026-06-29"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
